remove overflow hidden for the moment, but this will create bugs inside the card gradient

--- a/src/components/card/Card.style.scss
+++ b/src/components/card/Card.style.scss
@@ -3,7 +3,7 @@
 .card {
   padding: .5rem;
   position: relative;
-  overflow: hidden;
+  //overflow: hidden;
 
   * {
 
